--- a/app/src/main/res/layout/activity_pick_calendar.xml
+++ b/app/src/main/res/layout/activity_pick_calendar.xml
@@ -10,7 +10,8 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:textAlignment="center"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp" />
 
     <ListView
         android:id="@android:id/list"
