--- a/app/src/main/res/layout/calendar_list_item.xml
+++ b/app/src/main/res/layout/calendar_list_item.xml
@@ -2,7 +2,10 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true">
 
     <TextView
         android:id="@+id/item"
