--- a/app/src/main/res/layout/base_view.xml
+++ b/app/src/main/res/layout/base_view.xml
@@ -5,8 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    android:fitsSystemWindows="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,6 +15,7 @@
         <include layout="@layout/top_bar_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
         <FrameLayout
             android:id="@+id/base_frame"
             android:layout_width="match_parent"
