Added: Info about the calendar event
We now save the calendar event which we actually want to wake up for

--- a/app/src/main/res/layout/base_view.xml
+++ b/app/src/main/res/layout/base_view.xml
@@ -18,8 +18,7 @@
         <FrameLayout
             android:id="@+id/base_frame"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="20dp" />
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
