--- a/app/src/main/res/layout/journey_list_item.xml
+++ b/app/src/main/res/layout/journey_list_item.xml
@@ -17,6 +17,8 @@
             android:id="@+id/type"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/duration"
@@ -31,6 +33,7 @@
             android:id="@+id/from"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:textSize="12sp"
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/from_time"
@@ -45,6 +48,7 @@
             android:id="@+id/to"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:textSize="12sp"
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/to_time"
