--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#111</color>
     <color name="colorAccent">#777</color>
     <color name="tableAlternate">#22AAAAAA</color>
+    <color name="headerAccent">#44AAAAAA</color>
 </resources>
